bk_ida/gobmkida/c3/delete_persistent_reading_cache_entry
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/delete_persistent_reading_cache_entry/src/engine/persistent.c:986:52: error: use of undeclared identifier 'reading_cache'
memcpy( v6, &persistent_reading_cache[v7], sizeof( reading_cache)); 
                                                   ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/delete_persistent_reading_cache_entry/src/obj/1/persistent.o] Error 1
